tests/assembler/pass/test6.ial
type automatic Foo
{
    field const int32 bar;
}
